--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding 0;
+    padding: 0;
 }
 
 
@@ -15,17 +15,21 @@ body{
   background-image: url('background.png');
   background-repeat: no-repeat;
   background-position: center top ;
-  max width: 960px;
 }
 
-.clearfix::after {
+main {
+    max-width: 960px;
+    margin: 5vh auto;}
+
+ .clearfix::after {
     content: "";
     display: block;
     clear: both;
-}
+} 
 
 header {
-    width: 960px;
+    max-width: 960px;
+    margin: 5vh auto;
     height: 207px;
 }
 
@@ -33,7 +37,7 @@ header div{
     float: left;
     box-sizing: border-box;
     width: 70;
-}
+} 
 
 h1 {
     font-size: 15px;
@@ -45,24 +49,32 @@ h3 {
     font-size: 9px;
 }
 
-section.countries{
-    
+
+.gallery {
+    display: flex;
+    /* justify-content: space-between; */
+    justify-content: space-around;
+    margin-bottom: 70px;
+
 }
 
-.countries div{
+.country{
+
+}
+
+.country h1 {
+    text-align: center;
+}
+
+img.countrypic {
     width: 260px;
-    height: 178px;
-    color: #cccccc;
 }
 
-
-img.country {
-    float: left;
-    border solid 1px #cccccc;
-    background-color: #cccccc;
-    padding: 10px;
+footer {
+    max-width: 960px;
+    margin: 5vh auto;
 }
 
-footer div {
-    
+footer h2 {
+    text-align: center;
 }
