--- a/style.css
+++ b/style.css
@@ -17,50 +17,55 @@ body{
   background-position: center top ;
 }
 
+header {
+    max-width: 960px;
+    margin: 5vh auto;
+
+}
+
+.contact {
+    position: fixed;
+
+}
+
+/* header div{
+    float: left;
+    box-sizing: border-box;
+    width: 70;
+}  */
+
+h1 {
+    font-size: 15px;
+    font-weight: 500;
+}
+h2 {
+    font-size: 10px;
+    font-weight: 500;
+}
+h3 {
+    font-size: 9px;
+    font-weight: 500;
+}
+
 main {
     max-width: 960px;
     margin: 5vh auto;}
 
- .clearfix::after {
+ /* .clearfix::after {
     content: "";
     display: block;
     clear: both;
-} 
-
-header {
-    max-width: 960px;
-    margin: 5vh auto;
-    height: 207px;
-}
-
-header div{
-    float: left;
-    box-sizing: border-box;
-    width: 70;
-} 
-
-h1 {
-    font-size: 15px;
-}
-h2 {
-    font-size: 10px;
-}
-h3 {
-    font-size: 9px;
-}
+}  */
 
 
 .gallery {
     display: flex;
     /* justify-content: space-between; */
     justify-content: space-around;
-    margin-bottom: 70px;
-
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-.country{
-
-}
 
 .country h1 {
     text-align: center;
@@ -68,13 +73,26 @@ h3 {
 
 img.countrypic {
     width: 260px;
+    height: 178px;
+}
+
+.image {
+    width: 260px;
+    height: 178px;
+    border: 3px solid #9b9b9b;
+    border-radius: 3px;
+    box-shadow: inset 0 0 10px 5px black;
 }
 
 footer {
     max-width: 960px;
     margin: 5vh auto;
+    padding: 30px o;
+
+    
 }
 
 footer h2 {
     text-align: center;
+
 }
